crates/indexing/tests/snapshots/indexing__index_export.snap
---
source: crates/indexing/tests/indexing.rs
expression: snapshot
snapshot_kind: text
---
life: Some(Id(0))
eq_class: Some(Id(1))
synonym: Some(Id(2))
data: Some(Id(3))
data_a: Some(Id(3))
data_b: Some(Id(3))
list: Some(Id(4))
list_cons: Some(Id(4))
list_nil: Some(Id(4))
plus: Some(Id(5))
plus_type: Some(Id(6))
export: Some(Id(7))
