crates/indexing/tests/snapshots/indexing__index_export_duplicate.snap
---
source: crates/indexing/tests/indexing.rs
expression: errors
snapshot_kind: text
---
[
    DuplicateExport {
        existing: Id(
            0,
        ),
        duplicate: Id(
            1,
        ),
    },
    DuplicateExport {
        existing: Id(
            2,
        ),
        duplicate: Id(
            3,
        ),
    },
    DuplicateExport {
        existing: Id(
            4,
        ),
        duplicate: Id(
            5,
        ),
    },
    DuplicateExport {
        existing: Id(
            6,
        ),
        duplicate: Id(
            7,
        ),
    },
    DuplicateExport {
        existing: Id(
            8,
        ),
        duplicate: Id(
            9,
        ),
    },
    DuplicateExport {
        existing: Id(
            10,
        ),
        duplicate: Id(
            11,
        ),
    },
    DuplicateExport {
        existing: Id(
            12,
        ),
        duplicate: Id(
            13,
        ),
    },
]
